fix: carousel bugs on iOS

--- a/src/modules/pages/catalogPage/components/CatalogPageCarousel/CatalogPageCarousel.module.scss
+++ b/src/modules/pages/catalogPage/components/CatalogPageCarousel/CatalogPageCarousel.module.scss
@@ -68,6 +68,10 @@
     }
   }
 
+  :global(.image-gallery.fullscreen-modal) {
+    z-index: 101;
+  }
+
   :global(.image-gallery-slide-wrapper) {
     height: 100%;
   }
